--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "private": true,
   "devDependencies": {
     "@ethersproject/experimental": "^5.0.1",
-    "@rugenerous/exchange-contracts": "1.0.2",
-    "@rugenerous/governance": "1.0.6",
-    "@rugenerous/sdk": "1.1.0",
-    "@rugenerous/token-lists": "^1.0.1",
-    "@rugenerous/web3-react-injected-connector": "1.0.1",
     "@popperjs/core": "^2.4.4",
     "@reach/dialog": "^0.10.3",
     "@reach/portal": "^0.10.3",
     "@reduxjs/toolkit": "^1.3.5",
+    "@rugenerous/exchange-contracts": "^1.0.8",
+    "@rugenerous/sdk": "^1.0.6",
+    "@rugenerous/token-lists": "^1.0.0",
+    "@rugenerous/web3-react-injected-connector": "^1.0.2",
     "@types/jest": "^25.2.1",
     "@types/lodash.flatmap": "^4.5.6",
     "@types/luxon": "^1.24.4",
@@ -125,6 +124,8 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@types/crypto-js": "^4.0.2",
-    "crypto-js": "^4.0.0"
+    "crypto-js": "^4.0.0",
+    "react-tsparticles": "^1.37.5",
+    "tsparticles": "^1.37.5"
   }
 }
