--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Pangolin",
-  "name": "Pangolin",
+  "short_name": "RuGenerous",
+  "name": "RuGenerous",
   "icons": [
     {
       "src": "./images/192x192_App_Icon.png",
