update URLs to point to swap.rug.farm

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "rugenerous-app-temp"
 type = "javascript"
-route = "app.rugenerous.exchange/*"
+route = "swap.rug.farm/*"
 
 [site]
 bucket = "./build"
